# Arduino_STM32

./: .gitignore  .gitmodules  LICENSE  README.md  precomile.txt  sketch_nov21a.d
.github/workflows/: TestCompile.yml
GD32F1/: boards.txt  platform.txt
GD32F1/system/: build-targets.mk
Maple/: boards.txt  platform.txt
STM32F1/: boards.txt  platform.rewrite.keys.txt  platform.txt
STM32F1/libraries/: rcc.h  rcc_f1.c  usb.c
STM32F1XX/: SPI-v2.patch(1).txt  boards.txt  platform.txt
STM32F1XX/system/: Makefile
STM32F3/: README.md  boards.txt  platform.txt
STM32F4/: boards.txt  platform.rewrite.keys.txt  platform.txt
drivers/linux/: install-udev-rules.sh
drivers/win/: install_STM_COM_drivers.bat  install_drivers.bat
examples/: pde.txt
maple_mini_bootloader/: maple_mini_boot20.h  maple_mini_boot20_noRam.h  maple_mini_bootloader.ino  maple_mini_original_small.h  maplemini_boot_x2000-2-0.h  types.h
other/maple-bootloader/: Makefile  config.h  dfu.c  hardware.c  main.c  readme.md  usb.c  usb.h  usb_callbacks.c  usb_descriptor.h
src/: SPI.cpp  SPI.h
tools/linux/: 45-maple .rules.arch  45-maple.rules  hid_upload  install-udev-rules.sh  install.sh  jlink_upload  maple_upload  openocd.cfg  openocd_upload  serial_upload  stlink_upload  stlinkv2.cfg  stlinkv2_upload  upload-reset  upload_router
tools/linux64/: hid-flash  install.sh  maple_upload  readme.txt  serial_upload  stlink_upload  upload-reset  upload_router
tools/linux64/src/dfu-util/: AUTHORS  configure.ac
tools/linux64/src/dfu-util/device-logs/: dsonano.lsusb  lpclink.lsusb  simtrace.lsusb
tools/linux64/src/dfu-util/doc/: Makefile.am  dfu-util.1
tools/linux64/src/dfu-util/msvc/: README_msvc.txt  dfu-suffix_2010.vcxproj  dfu-util_2010.sln
tools/linux64/src/dfu-util/src/: dfu.c  dfu_load.c  dfuse.h  main.c  prefix.c  quirks.c  quirks.h
tools/linux64/src/dfu-util/www/: dfu-util.1.html
tools/macosx/: hid-flash  hid_flash  jlink_upload  maple_upload  (+5 more)
tools/macosx/src/dfu-util/src/: Makefile.am  dfu.h  dfu_load.h  dfu_util.c  dfuse.c  dfuse_mem.c  suffix.c
tools/rpi/src/dfu-util/src/: Makefile.am  dfu.c  dfu.h  dfu_file.c  dfu_file.h  dfu_load.c  dfu_load.h  dfuse.c  dfuse.h  dfuse_mem.c  lmdfu.c  lmdfu.h  main.c  portable.h  quirks.c  quirks.h  suffix.c  usb_dfu.h
(+2657 files in other folders)
